# ecosys

./: APS_CANON_COMPILER_REQUIREMENTS.md  APS_LATEX_PREAMBLE_SPEC.md  APS_PARSER_DESIGN.md  Aurphyx_Domains.md  COMMUNITY.md  EXPERIMENTS.md  MEMORY_IMPORT_GOOGLE.md  PHYSICS.md  README.md  SCIENTIFIC_TERMINOLOGY.md  SoulSync_GVS_Overview.md  The_Rust_Compiler_with_a_Nervous_System.md  VIM.ipynb  aps_okf_frontmatter.md  aurafs_src_core_bliss.rs.md  codebase.md  dls.md  forge_and_build_prime-colossus-py.md  hecate_build.py  master_extraction.py  md2tex.py  nc_aurafs.rs  nc_aurafs.rs.md  rae-main-04-02-2026_filelist.txt  rae-main_03-01-2026-repolist.txt  rae-main_03-03-2026-repolist.txt  rae_04-26-2026_filelist.txt  rae_aurphyx_c0d3x.md  rae_orcid.txt  rossaedwards_03-07-2026-repolist.txt  rossaedwards_03-30-2026_filelist.txt  rossaedwards_06-06-2026_filelist.txt  rossaedwards_06-18-2026_tree.txt  rossaedwards_06-22-2026_tree.txt  scan_crossref_bibs.py  sections_context_vim.md  simforge.py  szzz.txt  verify_raet_flux.ipynb  vim_build_scaffold.py
aurafs/: .cursorrules  .gitignore  AURAFS_AUDIT_AND_DEPLOY.md  AURAFS_PROJECT_CONTEXT.md  AURAFS_TRL4_PRODUCTION_CONTEXT.md  AURAFS_TRL4_PRODUCTION_CONTEXT_PART2.md  AURAFS_TRL4_PRODUCTION_CONTEXT_PART3.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIX_UPDATE_BUILD_audit.md  FIX_UPDATE_BUILD_config.md  FIX_UPDATE_BUILD_fuse.md  FIX_UPDATE_BUILD_gov.md  FIX_UPDATE_BUILD_lib.md  FIX_UPDATE_BUILD_network.md  FIX_UPDATE_BUILD_physics.md  PHASE1_AUDIT_SUMMARY.md  README.md  SECURITY.md  VALIDATION_REPORT.md  aurafs.toml.md  aurphyx_main_aurafs_03-06-2026-repolist.txt  cursorrules
aurafs/.github/: CODEOWNERS
aurafs/.github/scripts/: physics_audit.py
aurafs/.github/workflows/: ci.yml  physics_audit.yml
aurafs/compliance/: ALGORITHM_PROOFS.md  DARPA_TRL_VALIDATION.md  PHYSICS_INVARIANTS.json  SECURITY_AUDIT.md
aurafs/deploy/systemd/: aurafs.env.example  aurafs.service
aurafs/docker/: .env.example  Caddyfile  Dockerfile  Dockerfile.api  docker-compose.yml
aurafs/docs/: deploy-compose.md  deploy-systemd.md  gitrepos.txt  release-binaries.md
aurafs/docs/internal/: development-notes.md
aurafs/examples/: basic_usage.rs  main.rs
aurafs/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
aurafs/helm/templates/: _helpers.tpl  cert-manager-certificate.yaml  cert-manager-issuer.yaml  configmap.yaml  deployment-api.yaml  hpa-api.yaml  hpa-shard.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  secret-tls.yaml  service-api.yaml  service-shard.yaml  serviceaccount-api.yaml  serviceaccount-shard.yaml  servicemonitor.yaml  statefulset-shard.yaml
aurafs/integrations/: README.md
aurafs/integrations/aurafs/: backend.rs  mod.rs  shard.rs
aurafs/k8s/: base.yaml  prometheus-values.yaml
aurafs/k8s/helm/: aurafs-prod.yaml
aurafs/scripts/: deploy_k8s.sh  deployk8s.sh  scaffold_afs_red_white.ps1  scaffold_crypto_network_FIXED.ps1  test_all.sh
aurafs/sdk/: Cargo.toml  afs_sdk.rs
aurafs/simulations/: decoherence_suppression_test.py  fractal_bias_validator.py  resonance_frequency_sweep.py
aurafs/src/: aurafs-src_04-09-2026_filelist.txt  aurafs_src_file_list.txt  autoheal_daemon.rs  config.rs  error.rs  lib.rs  main.rs
aurafs/src/acl/: ENTERPRISE_IMPROVEMENTS.md  acl_config.json  manager.rs  mod.rs
aurafs/src/ai/: AI_IMPLEMENTATION_GUIDE.md  error.rs  fractal_orchestrator.rs  mod.rs
aurafs/src/api/: server.rs  websockets.rs
aurafs/src/audit/: holographic_logger.rs  logger.rs
aurafs/src/cache/: ENTERPRISE_IMPROVEMENTS.md  lru.rs  mod.rs
aurafs/src/cli/: admin.rs  aurafs_cli.rs  banner.rs  mod.rs  tui.rs  user.rs
aurafs/src/compression/: lattice.rs  lz4.rs  manager.rs  mod.rs  quantum.rs  stats.rs  zstd.rs
aurafs/src/config/: manager.rs
aurafs/src/core/: ENTERPRISE_IMPROVEMENTS.md  bliss.rs  circuit_breaker.rs  config.rs  crypto.rs  error.rs  health.rs  merkle.rs  metrics.rs  mod.rs  network.rs  persistence.rs  rate_limiter.rs  review_suggestion.md  shard.rs  soulproof.rs  tracing.rs
aurafs/src/crypto/: encryption.rs  hash.rs  hybrid.rs  mod.rs  quantum.rs  signature.rs  signature_tests.rs  zk_proofs.rs  zk_proofs_tests.rs
aurafs/src/dedup/: cache.rs  dedup_engine.rs  fingerprint.rs  mod.rs  similarity.rs
aurafs/src/enterprise/: cache.rs  metrics.rs  mod.rs  network.rs  security.rs  storage.rs  testing.rs
aurafs/src/error/: ENTERPRISE_IMPROVEMENTS.md  context.rs
aurafs/src/fuse/: filesystem.rs  fusemain.rs  inode_cache.rs  main.rs  mod.rs  mount.rs  node.rs  session.rs  timed_lock.rs
aurafs/src/gov/: api.rs  audit_log.rs  blissid_manager.rs  consensus_integration.rs  fastapi.rs  identity_verifier.rs  mod.rs  models.rs  policy_enforcer.rs  proposal_manager.rs  sages.rs  server.rs  soulsync_engine.rs  transaction_type.rs  voting_engine.rs
aurafs/src/heal/: mod.rs  repair.rs
aurafs/src/mesh/: core.rs  gossip.rs  mod.rs  protocol.rs  routing.rs  swarm.rs
aurafs/src/model_slice/: ENTERPRISE_IMPROVEMENTS.md  fractal.rs  mod.rs  optimizer.rs  pytorch.rs
aurafs/src/monitoring/: health.rs  metrics.rs  mod.rs
aurafs/src/namespace/: manager.rs  (+3 more)
aurafs/tests/: TESTS - Full End-to-End Verification.txt
aurafs/tts/: Cargo.toml  afs_tts_master_forge.ps1  afs_tts_part1_core.ps1  afs_tts_part2_streaming.ps1  afs_tts_part3_backends.ps1  afs_tts_part4_voicepacks_cache.ps1  afs_tts_part5_api_cli.ps1  afs_tts_part6_integrations_tests.ps1  mod.rs  tts_engine.rs
aurafs/versioning/: tracker.rs
lapidary/: Cargo.toml
lapidary/src/: context.rs  main.rs  parser.rs  pipeline.rs  transformer.rs
vibe-audio-visualizer/: CMakeLists.txt  README.md
vibe-audio-visualizer/shaders/: post_bloom.frag  vibe.frag  vibe.vert
vibe-audio-visualizer/src/: dsp_engine.c  dsp_engine.h  gl_renderer.c  gl_renderer.h  vap_loader.c  vap_loader.h  vap_runtime.c  vap_runtime.h  vibe_visualizer.c
vibe-audio-visualizer/tests/: test_dsp_engine.c  test_vap_loader.c
vibe-audio-visualizer/tools/: vap_tagger.py
vibe-audio-visualizer/vap/: vap_affective.h  vap_kinetic.h  vap_photometric.h  vap_schema.json
(+1346 files in other folders)
