[package]
name = "aurafs-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "afs_sdk.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
thiserror = { workspace = true }
log = "0.4"
